--- a/app/src/main/res/layout/toolbar_custom.xml
+++ b/app/src/main/res/layout/toolbar_custom.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:theme="@style/ThemeOverlay.AppCompat.Light">
-
-    <TextView
-        android:id="@+id/toolbarTitle"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbarTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="지도"
@@ -17,4 +10,3 @@
         android:layout_gravity="start|center_vertical"
         android:paddingStart="16dp" />
 
-</androidx.appcompat.widget.Toolbar>
