--- a/app/src/main/res/layout/fragment_recode_blood_sugar.xml
+++ b/app/src/main/res/layout/fragment_recode_blood_sugar.xml
@@ -36,7 +36,8 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <com.google.android.material.materialswitch.MaterialSwitch
                         android:id="@+id/swRange"
@@ -191,16 +192,52 @@
                 android:layout_height="wrap_content">
 
                 <!-- 노란 헤더 -->
-                <TextView
-                    android:id="@+id/tvChartTitle"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical"
-                    android:paddingStart="12dp"
-                    android:text="이번 주 공복 혈당 그래프"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:background="@color/chart_header_yellow"/>
+                    android:layout_height="wrap_content"
+                    android:background="@color/chart_header_yellow"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tvChartTitle"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:paddingStart="12dp"
+                        android:text="이번 주 공복 혈당 그래프"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"
+                        />
+                    <LinearLayout
+                        android:id="@+id/dropdownButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:padding="8dp"
+                        android:clickable="true"
+                        android:focusable="true">
+
+                        <TextView
+                            android:id="@+id/dropdownText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="공복"
+                            android:textColor="@color/black"
+                            android:textSize="13sp"/>
+
+                        <ImageView
+                            android:id="@+id/dropdownArrow"
+                            android:layout_width="12dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_down"
+                            android:paddingTop="3dp"
+                            android:layout_marginStart="4dp"/>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
 
                 <!-- 차트 자리 -->
                 <FrameLayout
@@ -216,8 +253,9 @@
             android:layout_height="wrap_content"
             android:text="오늘은 기록된 혈당이 없어요."
             android:textAlignment="center"
-            android:textColor="#666666"
+            android:textColor="#1B1717"
             android:padding="16dp"
+            android:layout_marginBottom="60dp"
             android:visibility="gone"/>
         <!-- [4] 오늘의 혈당(리스트) -->
         <androidx.recyclerview.widget.RecyclerView
