--- a/app/src/main/res/layout/item_course_card.xml
+++ b/app/src/main/res/layout/item_course_card.xml
@@ -12,7 +12,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp">
-
+        <!-- 닫기 버튼 -->
+        <ImageButton
+            android:id="@+id/btnClose"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="end"
+            android:layout_marginBottom="10dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="닫기"
+            app:srcCompat="@drawable/ic_close" />
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
