--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/nav_home"
         android:title="홈"
@@ -15,9 +16,12 @@
     <item
         android:id="@+id/nav_market"
         android:title="스토어"
-        android:icon="@drawable/ic_cart"/>
+        android:icon="@drawable/ic_cart"
+        android:iconTint="@color/app_bg"/>
     <item
         android:id="@+id/nav_community"
         android:title="커뮤니티"
-        android:icon="@drawable/ic_community"/>
+        android:icon="@drawable/ic_community"
+        app:itemIconTint="@color/main_color"
+        />
 </menu>
