--- a/app/src/main/res/values/styles_profile.xml
+++ b/app/src/main/res/values/styles_profile.xml
@@ -59,7 +59,11 @@
     <!-- 보조 칩 (끼니 선택) -->
     <style name="Record_Chip_Secondary" parent="Record_Chip">
         <item name="chipStrokeColor">#EFE4C8</item>
-        <item name="android:textColor">#6B5C32</item>
+        <item name="android:textColor">@color/chip_text_selector</item>
+        <item name="chipBackgroundColor">@color/transparent</item>
+        <item name="rippleColor">#22B39D5E</item>
+        <item name="shapeAppearance">@style/Shape_Rounded_16</item>
+        <item name="checkedIconVisible">false</item>
     </style>
 
     <!-- 둥근 모서리 공통 -->
