--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,8 @@
     </style>
 
     <style name="Theme.Walking_hadang" parent="Base.Theme.Walking_hadang">
+        <!--기본 스플래시 투명처리        -->
+        <item name="android:windowIsTranslucent">true</item>
         <!-- 상태바를 숨기지 않도록 설정 -->
         <item name="android:windowFullscreen">false</item>
         <!-- 상태바 색상 지정 (선택) -->
