--- a/app/src/main/res/drawable/btn_category.xml
+++ b/app/src/main/res/drawable/btn_category.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- 눌렀을 때 -->
-    <item android:state_pressed="true">
+    <!-- 선택됨 -->
+    <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="#14000000"/> <!-- 검정 8% 투명 -->
+            <solid android:color="#14000000"/>
             <corners android:radius="30dp"/>
-
         </shape>
     </item>
-
-    <!-- 평상시 -->
+    <!-- 눌림 -->
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#14000000"/>
+            <corners android:radius="30dp"/>
+            <stroke android:width="1dp" android:color="#D3A33A"/>
+        </shape>
+    </item>
+    <!-- 기본 -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/> <!-- 흰색 -->
+            <solid android:color="#FFFFFF"/>
             <corners android:radius="30dp"/>
+            <stroke android:width="1dp" android:color="#E0E0E0"/>
         </shape>
     </item>
 </selector>
