--- a/app/src/main/res/layout/item_community_post.xml
+++ b/app/src/main/res/layout/item_community_post.xml
@@ -75,31 +75,54 @@
         android:orientation="horizontal"
         android:layout_marginTop="6dp">
 
-        <TextView
-            android:id="@+id/tvLikes"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/reactionBar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="👍 5"
-            android:textSize="12sp"
-            android:textColor="#888888"
-            android:layout_marginEnd="12dp"/>
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvComments"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="💬 6"
-            android:textSize="12sp"
-            android:textColor="#888888"
-            android:layout_marginEnd="12dp"/>
+            <ImageButton
+                android:id="@+id/btnLike"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_like" />
 
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2시간 전"
-            android:textSize="12sp"
-            android:textColor="#888888"/>
+            <TextView
+                android:id="@+id/tvLikeCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:text="0" />
+
+
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:src="@drawable/ic_comment"/>
+
+            <TextView
+                android:id="@+id/tvCommentCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="0" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:text="2시간 전"
+                android:textSize="12sp"
+                android:textColor="#888888"/>
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </LinearLayout>
